--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,44 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-
-
-header {
-  margin-top: -10px;
+/* Header.css */
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #084b8a;
-  padding: 0px 0px;
+  width: 100%;
+  background-color: #084b8a; 
 }
-
 
 .site-title {
   font-size: 24px;
-  font-weight: bold;
-  color: white;
-  margin: 0;  
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  font-family: 'Roboto', sans-serif; 
+  margin: 10px;
+  color: white; 
+  font-family: "Arial", sans-serif;
 }
 
-
-.logo-container {
+.header-logo-container {
+  margin-right: 20px;
   display: flex;
-  align-items: center;
-  margin-left: auto; 
+
 }
 
-
-.csuf-logo,
-.nsf-logo {
-  height: 50px; 
-  margin: 0;
-  padding: 0;
-  display: block; 
-  box-sizing: border-box; 
+.csuf-logo, .nsf-logo {
+  height: 40px; /* Adjust size as needed */
+  width: auto;
 }
 
-.csuf-logo {
-  margin-right: 10px; 
-}
