--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,96 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
-
 .container {
   display: flex;
 }
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
+  background: #fff;
+  color: #fff;
 
-  background-color: #ffffff; 
-  color: #084b8a; 
-  transition: width 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  font-family: 'Roboto', sans-serif;
+  width: 200px;
+  transition: all 0.3s;
+  border-right: 1px solid #e0e0e0 ;
 }
-
 
 .sidebar.closed {
-  width: 75px;
+  width: 50px;
 }
-
 
 .top_section {
+  background: #084b8a;
   display: flex;
   align-items: center;
-  height: 12px;
-  padding: 18px;
-  background-color: #084b8a; 
+  padding: 20px 15px;
+  border-bottom: 1px solid #e0e0e0;
 }
-
 
 .logo {
-  font-size: 20px;
-  font-weight: bold;
-  margin-left: 40px;
-  color: #ffffff; 
+  font-size: 25px;
 }
 
+.logo-container {
+  width: 100px;
+  height: auto;
+}
+
+.pathways-logo {
+  width: 100%;
+  height: auto;
+}
 
 .bars {
-  margin-top: -15px;
-  font-size: 60px;
+  display: flex;
+  font-size: 25px;
+  margin-left: 65px;
   cursor: pointer;
-  color: #ffffff; 
 }
 
+.fa-bars-icon:hover {
+  color: #f0f0f0;
+}
 
 .link {
   display: flex;
-  align-items: center;
-  padding: 15px 20px;
-  color: #084b8a;
+  gap: 10px;
+  padding: 10px 15px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s;
+  position: relative;
+}
+
+.icon-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.tooltip {
+  position: absolute;
+  left: 50px;
+  background: #333;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 14px;
+  visibility: hidden;
+  font-family: "Arial", sans-serif;
+  opacity: 0;
+  transition: opacity 0.3s, visibility 0.3s;
+  white-space: nowrap;
+  z-index: 1000;
+}
+
+.icon-container:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
 }
 
 .link:hover {
-  background-color: #e0e0e0; 
+  background: #f0f0f0;
+  color: #084b8a;
 }
 
-
-.link.active {
-  background-color: #c0c0c0;
+.icon, .link_text {
+  font-size: 16px;
 }
-
-
-.icon {
-  font-size: 20px;
-  color: #084b8a; 
-}
-
-
-.link_text {
-  margin-left: 15px;
-  color: #084b8a; 
-}
-
 
 .main-children {
-  margin-left: 200px;
+  flex: 1;
   padding: 20px;
-  flex-grow: 1;
-  background-color: #f9f9f9;
-  transition: margin-left 0.3s ease;
-  overflow-x: hidden;
-}
-
-
-.sidebar.closed + main {
-  margin-left:70px; 
 }
