--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -1,4 +1,4 @@
-.tile {
+.tile{
   position: relative;
   box-sizing: border-box;
   text-decoration: none;
@@ -6,9 +6,9 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 310px;
+  transition: all 0.3s ease;
   height: 360px;
+  width: 310px;
 }
 
 .tile-content {
@@ -17,30 +17,42 @@
   position: relative;
   padding: 20px;
   text-align: left;
+  height: 100%;
 }
 
-.tile h3 {
+.tile-title {
   margin: 15px 0 10px;
   font-size: 1.2em;
   color: #333;
+  font-weight: 600;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  min-height: calc(1.2em * 2);
+  line-height: 1.2;
 }
 
-.tile p {
-  font-size: 1em;
-  color: #666;
+.tile-description {
+  font-size: 0.95em;
+  color: #4a4a4a;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
+  min-height: calc(1.5em * 4);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .tile img {
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 140px;
   object-fit: cover;
-}
-
-.tile:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: block;
+  margin-bottom: 15px;
 }
 
 .bookmark-button {
@@ -49,7 +61,7 @@
   cursor: pointer;
   padding: 10px;
   position: absolute;
-  top: 280px;
+  bottom: 50px;
   right: 10px;
   font-size: 24px;
   z-index: 2;
@@ -62,11 +74,3 @@
 .bookmark-icon.blue {
   color: #084b8a;
 }
-
-
-
-/* .tile.research-page-tile {
-  width: 500px;
-  height: 360px; 
-} */
-
