--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -18,11 +18,19 @@
 .header-logo-container {
   margin-right: 20px;
   display: flex;
-
 }
 
 .csuf-logo, .nsf-logo {
-  height: 40px; /* Adjust size as needed */
+  height: 40px; 
   width: auto;
 }
 
+
+@media screen and (max-width: 460px) {
+  .site-title {
+    font-size: 14px;
+    margin: 10px;
+    color: white; 
+    font-family: "Arial", sans-serif;
+  }
+}
