--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -16,3 +16,18 @@
   font-style: italic;
 }
 
+@media screen and (max-width: 768px) {
+  .search-input {
+    width: 180px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .search-input {
+    margin-top: -10px;
+    height: 10px;
+  }
+  .search-input::placeholder {
+    font-size: 12px;
+}
+}
