--- a/frontend/src/components/Subhead/Subhead.css
+++ b/frontend/src/components/Subhead/Subhead.css
@@ -1,55 +1,86 @@
+.sidebar-toggle {
+  background: none;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  display: none; /* Hidden by default for desktop */
+  align-items: center;
+  z-index: 102;
+}
+
+.sidebar-toggle:focus {
+  outline: none;
+}
+
 .subhead-container {
-  position: fixed;
+
   display: flex;
   width: 100%;
-  background-color: #1e4b8d; 
+  background-color: #1e4b8d;
   padding: 0;
   margin: 0;
   z-index: 100;
   align-items: flex-end;
-  height: 50px; 
+  height: 50px;
 }
 
+.hamburger-icon {
+  display: none; /* Hidden by default for desktop */
+  width: 24px;
+  height: 24px;
+  color: white;
+}
 
 .subhead-option {
   font-family: Arial, sans-serif;
-  color: #fff; 
+  color: #fff;
   text-decoration: none;
   padding: 12px 20px;
   font-size: 16px;
-  font-weight: bold; 
-  transition: background-color 0.3s, box-shadow 0.3s; 
-  border-radius: 0px 10px 0 0; 
-  margin-right: 4px; 
-  background-color: #6c757d; 
-  
+  font-weight: bold;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  border-radius: 0px 10px 0 0;
+  margin-right: 4px;
+  background-color: #6c757d;
   position: relative;
 }
 
 .subhead-option:hover {
-  background-color: #b3b3b4; 
-  cursor: pointer; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  background-color: #b3b3b4;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .subhead-option.active {
-  background-color: #ffffff; 
+  background-color: #ffffff;
   color: #003366;
 }
 
 .main-container {
-  background-color: #ffffff; 
+  background-color: #ffffff;
   padding-top: 20px;
-  margin-top: -50px; 
+  margin-top: -50px;
 }
 
 @media (max-width: 768px) {
-
+  .subhead-container {
+    margin-left: 40px;
+    max-width: 700px;
+  }
+  
   .subhead-option {
     padding: 0px 20px;
-    font-size: 10px; 
+    font-size: 10px;
     width: 40px;
-    background-color: #1e4b8d; 
+    background-color: #1e4b8d;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+
+}
+
+@media (max-width: 460px) {
 
 }
