--- a/frontend/src/pages/FindGraduateSchools/FindGraduateSchools.css
+++ b/frontend/src/pages/FindGraduateSchools/FindGraduateSchools.css
@@ -1,4 +1,3 @@
-
 .Find-Graduate-Schools {
   display: flex;
   flex-direction: column;
@@ -24,7 +23,6 @@
   padding-bottom: 8px;
   letter-spacing: 0.5px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.05);
-  
 }
 
 .graduate-highlighted-paragraph::after {
@@ -51,12 +49,11 @@
   width: 100%;
 }
 
-
- .change-container {
+.change-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 20px;
-} 
+}
 
 .change-container .general-tiles {
   grid-column: 1;
@@ -66,8 +63,8 @@
   margin-top: -1900px;
   grid-column: 2;
   grid-column: 2 / 5;
-  max-height: 600px; 
-} 
+  max-height: 600px;
+}
 
 /* .general-tiles,
 .additional-tiles {
@@ -77,19 +74,30 @@
 } */
 
 @media (max-width: 768px) {
-  .Find-Graduate-Schools {
-    font-size: 18px; /* Smaller font for smaller screens */
-    text-align: center;
-  }
-
-  .Find-Graduate-Schoolsh::after {
-    width: 80%; 
-    left: 10%; 
-  }
-
   .resource-container {
     display: flex;
     flex-direction: column;
   }
 
+  .dropdown-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .graduate-highlighted-paragraph {
+    display: none;
+  }
+
+  .start-container,
+  .change-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+  .degree-change-container .general-tiles,
+  .degree-change-container .additional-tiles{
+    grid-template-columns: 1fr; 
+    margin-top: 0;
+    
+  }
 }
